Removed panels everywhere supportand rethemed

--- a/css/si_aaa.styles.css
+++ b/css/si_aaa.styles.css
@@ -2347,18 +2347,18 @@
   overflow: hidden; }
 
 /* line 2, ../sass/abstractions/_lists.scss */
-.l-header .menu, .menu-list ul {
+.l-footer .l-container .panel-col-first .item-list ul, .l-footer .l-container .panel-col-first .menu, .l-header .menu, .menu-list ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
   overflow: hidden; }
   /* line 7, ../sass/abstractions/_lists.scss */
-  .l-header .menu > li, .menu-list ul > li {
+  .l-footer .l-container .panel-col-first .item-list ul > li, .l-footer .l-container .panel-col-first .menu > li, .l-header .menu > li, .menu-list ul > li {
     display: block;
     list-style-type: none;
     float: left; }
     /* line 11, ../sass/abstractions/_lists.scss */
-    .l-header .menu > li:last-child, .menu-list ul > li:last-child {
+    .l-footer .l-container .panel-col-first .item-list ul > li:last-child, .l-footer .l-container .panel-col-first .menu > li:last-child, .l-header .menu > li:last-child, .menu-list ul > li:last-child {
       margin-right: 0px; }
 
 /* line 1, ../sass/base/_media.scss */
@@ -2559,33 +2559,34 @@ p {
     margin-bottom: 1.618em; }
   /* line 25, ../sass/components/_footer.scss */
   .l-footer .l-container h2 {
-    color: #515151; }
-  /* line 31, ../sass/components/_footer.scss */
-  .l-footer .l-container .l-region--footer-left .icon-list ul > li {
+    color: #515151;
+    margin-bottom: 0; }
+  /* line 33, ../sass/components/_footer.scss */
+  .l-footer .l-container .panel-col-first .menu .list-icon {
     padding: 0; }
-  /* line 35, ../sass/components/_footer.scss */
-  .l-footer .l-container .l-region--footer-left .si-terms-privacy {
+  /* line 38, ../sass/components/_footer.scss */
+  .l-footer .l-container .panel-col-first .si-terms-privacy {
     font-size: 11px;
     font-size: 0.78571rem; }
-  /* line 41, ../sass/components/_footer.scss */
-  .l-footer .l-container .l-region--footer-right .menu {
+  /* line 44, ../sass/components/_footer.scss */
+  .l-footer .l-container .panel-col-last .menu {
     list-style: none;
     margin: 0;
     padding: 0; }
-    /* line 45, ../sass/components/_footer.scss */
-    .l-footer .l-container .l-region--footer-right .menu .leaf, .l-footer .l-container .l-region--footer-right .menu .collapsed, .l-footer .l-container .l-region--footer-right .menu .expanded {
+    /* line 48, ../sass/components/_footer.scss */
+    .l-footer .l-container .panel-col-last .menu .leaf, .l-footer .l-container .panel-col-last .menu .collapsed, .l-footer .l-container .panel-col-last .menu .expanded {
       list-style-image: none;
       list-style-type: none; }
-  /* line 50, ../sass/components/_footer.scss */
-  .l-footer .l-container .l-region--footer-right .pane-system-main-menu .list-0 {
+  /* line 53, ../sass/components/_footer.scss */
+  .l-footer .l-container .panel-col-last .pane-system-main-menu .list-0 {
     margin-left: 0; }
   @media (min-width: 980px) {
-    /* line 52, ../sass/components/_footer.scss */
-    .l-footer .l-container .l-region--footer-right .pane-menu-menu-quick-links-menu,
-    .l-footer .l-container .l-region--footer-right .pane-system-main-menu {
+    /* line 55, ../sass/components/_footer.scss */
+    .l-footer .l-container .panel-col-last .pane-menu-menu-quick-links-menu,
+    .l-footer .l-container .panel-col-last .pane-system-main-menu {
       float: left; }
-    /* line 56, ../sass/components/_footer.scss */
-    .l-footer .l-container .l-region--footer-right .pane-menu-menu-quick-links-menu {
+    /* line 59, ../sass/components/_footer.scss */
+    .l-footer .l-container .panel-col-last .pane-menu-menu-quick-links-menu {
       padding-right: 2em; } }
 
 /* line 1, ../sass/components/_header.scss */
@@ -2815,5 +2816,9 @@ p {
   /* line 115, ../sass/components/_tb_megamenu.scss */
   .l-region--navigation .tb-megamenu .btn-navbar:hover {
     color: #2c2c2c; }
+
+/* line 2, ../sass/components/node/_node.scss */
+.street-address .additional {
+  display: block; }
 
 /*# sourceMappingURL=si_aaa.styles.css.map */
