--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -1,16 +1,17 @@
-$push-left: span(11);
+
 .search-block-form {
  input[type="submit"] {
    @include button_style(white, #134979, darken(#134979, 1%));
  background: {
    image: image-url("search.svg");
    repeat: no-repeat;
-   position:  center;
+   position:  50%;
    size: contain;
  }
  text-indent: -99999px;
- height: 33px;
- width: 30px;
+ height: 34px;
+ width: 34px;
+ padding: 0;
 }
   //.l-header & {
   //  position: relative;
@@ -39,36 +40,36 @@ $push-left: span(11);
 .l-header #block-search-form {
   position: relative;
   width: 0%;
-  min-width: 50px;
+  min-width: 34px;
   height: 0%;
-  min-height: 33px;
+  min-height: 34px;
   overflow: hidden;
  // float: right;
   overflow: hidden;
-  @include transition(width .3s ease-in, height .3s ease-in);
-  //-webkit-transition: width 0.3s;
-  //-moz-transition: width 0.3s;
-  //transition: width 0.3s;
+  @include transition(height .4s ease);
+  //-webkit-transition: width 0.4s;
+  //-moz-transition: width 0.4s;
+  //transition: width 0.4s;
   .form-type-textfield {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     border: none;
     outline: none;
-    height: 33px;
+    //height: 33px;
     margin: 0;
     display: block;
-    z-index: 10;
+    z-index: 0;
     //padding-right: 35px;
 //    line-height: 33px;
+    @include transition(top .4s ease);
     input {
       background: white;
-      padding: em($vert-spacing-unit/3);
     }
   }
   .form-actions {
-    width: 30px;
-    height: 33px;
+    width: 34px;
+    height: 34px;
     display: block;
     position: absolute;
     right: 0;
@@ -77,7 +78,7 @@ $push-left: span(11);
     margin: 0;
    // line-height: 33px;
     cursor: pointer;
-    z-index: 20;
+    z-index: 10;
   }
   -webkit-backface-visibility: hidden;
   &.sb-search-open,
@@ -85,9 +86,13 @@ $push-left: span(11);
     width: auto;
     height: 100%;
     overflow: visible;
-
+    .form-type-textfield {
+      top: 40px;
+      @include transition(top .4s ease);
+    }
   }
-}
+
+} //end .l-header #block-search-form
 
 @include breakpoint($desk) {
   //.block--search-form {
@@ -95,12 +100,26 @@ $push-left: span(11);
   //  @include rem(top, 108px);
   //  left: $push-left;
   //}
-  .l-header .search-block-form {
+  .l-header #block-search-form  {
+    min-width: 28px;
+    min-height: 28px;
+
     input[type="submit"] {
       @include button_style(white, $blue, $blue);
+      width: 28px;
+      height: 28px;
+    }
+    .form-actions {
+      width: 28px;
+      height: 28px;
+    }
+    .form-type-textfield {
+      right: 0;
+      left: auto;
+      top: 34px;
     }
   }
-}
+} //end breakpoint
 
 //@include breakpoint($wide) {
 //  .block--search-form {
