--- a/css/layouts/baseline/baseline.layout.no-query.css
+++ b/css/layouts/baseline/baseline.layout.no-query.css
@@ -5,26 +5,26 @@
  * and building mobile first layouts.
  ******************************************************************************/
 /* line 16, ../../../sass/layouts/baseline/baseline.layout.scss */
-.l-container,
+.default-page .l-container,
 .l-region-header-preface-right-wrapper,
-.front .l-panel-wrapper {
+.pane-edan-search-search-form,
+.front .l-panel-wrapper
+.l-footer .l-container {
   max-width: 96%;
   margin-left: auto;
   margin-right: auto;
   width: 1200px; }
   /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
-  .l-container:after,
+  .default-page .l-container:after,
   .l-region-header-preface-right-wrapper:after,
-  .front .l-panel-wrapper:after {
+  .pane-edan-search-search-form:after,
+  .front .l-panel-wrapper
+  .l-footer .l-container:after {
     content: " ";
     display: block;
     clear: both; }
 
-/* line 22, ../../../sass/layouts/baseline/baseline.layout.scss */
-.front .l-main.l-container {
-  max-width: 100%; }
-
-/* line 26, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 25, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-container,
 .l-header {
   *zoom: 1; }
@@ -40,7 +40,7 @@
   .l-header:after {
     clear: both; }
 
-/* line 36, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 35, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-header-preface-wrapper,
 .l-page > header,
 .l-main,
@@ -55,37 +55,37 @@
   margin-bottom: 24px;
   margin-bottom: 2.4rem; }
 
-/* line 49, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 48, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-header {
   position: relative; }
 
-/* line 52, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 51, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-header-middle {
   padding: 24px 0;
   padding: 2.4rem 0; }
 
-/* line 56, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 55, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region--header-preface-left {
   padding: 0 2%;
   height: 55px; }
 
-/* line 61, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 60, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region-header-preface-right-wrapper .l-inner {
   float: right; }
-/* line 64, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 63, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region-header-preface-right-wrapper .l-region--header-preface-right {
   float: right; }
-  /* line 66, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 65, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region-header-preface-right-wrapper .l-region--header-preface-right > div {
     float: left; }
 
-/* line 72, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 71, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region--navigation {
   position: absolute;
   left: 2%;
   top: 52px; }
 
-/* line 79, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 78, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region--header-wrapper {
   display: none; }
 
