--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -22,3 +22,9 @@ input[type="submit"] {
 .form-text {
   max-width: 100%;
 }
+
+input[type="text"] {
+ background: white;
+ border: 1px solid $gray-lighter;
+ padding: 4px;
+}
